Add payments sum to /returns endpoint