@@ -3,7 +3,6 @@ package ee.tuleva.onboarding.comparisons.returns;
 import static ee.tuleva.onboarding.currency.Currency.EUR;
 import static java.math.BigDecimal.ZERO;
 import static java.time.ZoneId.systemDefault;
-import static java.util.stream.Collectors.toList;
 
 import ee.tuleva.onboarding.comparisons.fundvalue.FundValue;
 import ee.tuleva.onboarding.comparisons.fundvalue.FundValueProvider;
@@ -13,6 +12,7 @@ import java.math.BigDecimal;
 import java.math.MathContext;
 import java.math.RoundingMode;
 import java.time.Instant;
+import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
@@ -28,49 +28,46 @@ import org.springframework.stereotype.Service;
 @Slf4j
 public class ReturnCalculator {
 
-  private static final int OUTPUT_SCALE = 4;
+  private static final int RETURN_DECIMAL_PLACES = 4;
+  private static final int CASH_DECIMAL_PLACES = 2;
 
   private final FundValueProvider fundValueProvider;
 
   public ReturnDto getReturn(AccountOverview accountOverview) {
-    return new ReturnDto(
-        getRateOfReturn(accountOverview),
-        getCashReturn(accountOverview),
-        EUR,
-        accountOverview.sort().getFirstTransactionDate().orElse(accountOverview.getStartDate()));
+    BigDecimal rateOfReturn = getRateOfReturn(accountOverview);
+    CashReturn cashReturn = getCashReturn(accountOverview);
+    LocalDate from =
+        accountOverview.sort().getFirstTransactionDate().orElse(accountOverview.getStartDate());
+    return new ReturnDto(rateOfReturn, cashReturn.value, cashReturn.paymentsSum, EUR, from);
   }
 
   public ReturnDto getReturn(AccountOverview accountOverview, String comparisonFund) {
-    return new ReturnDto(
-        getRateOfReturn(accountOverview, comparisonFund).orElse(ZERO),
-        getCashReturn(accountOverview, comparisonFund).orElse(ZERO),
-        EUR,
-        accountOverview.sort().getFirstTransactionDate().orElse(accountOverview.getStartDate()));
+    CashReturn cashReturn = getCashReturn(accountOverview, comparisonFund);
+    BigDecimal rateOfReturn = getRateOfReturn(accountOverview, comparisonFund);
+    LocalDate from =
+        accountOverview.sort().getFirstTransactionDate().orElse(accountOverview.getStartDate());
+    return new ReturnDto(rateOfReturn, cashReturn.value, cashReturn.paymentsSum, EUR, from);
   }
 
   private BigDecimal getRateOfReturn(AccountOverview accountOverview) {
     List<Transaction> purchaseTransactions = getPurchaseTransactions(accountOverview);
 
-    return BigDecimal.valueOf(
-        calculateReturn(
-            purchaseTransactions,
-            accountOverview.getEndingBalance(),
-            accountOverview.getEndTime()));
+    return calculateReturn(
+        purchaseTransactions, accountOverview.getEndingBalance(), accountOverview.getEndTime());
   }
 
-  private Optional<BigDecimal> getRateOfReturn(
-      AccountOverview accountOverview, String comparisonFund) {
+  private BigDecimal getRateOfReturn(AccountOverview accountOverview, String comparisonFund) {
     List<Transaction> purchaseTransactions = getPurchaseTransactions(accountOverview);
 
     val sellAmount =
         getSimulatedEndingBalanceForAFund(accountOverview, comparisonFund, purchaseTransactions);
 
-    if (sellAmount.isEmpty()) return Optional.empty();
-    else
-      return Optional.of(
-          BigDecimal.valueOf(
-              calculateReturn(
-                  purchaseTransactions, sellAmount.orElseThrow(), accountOverview.getEndTime())));
+    if (sellAmount.isEmpty()) {
+      return ZERO;
+    }
+
+    return calculateReturn(
+        purchaseTransactions, sellAmount.orElseThrow(), accountOverview.getEndTime());
   }
 
   private Optional<BigDecimal> getSimulatedEndingBalanceForAFund(
@@ -100,38 +97,53 @@ public class ReturnCalculator {
     return Optional.of(sellAmount);
   }
 
-  private BigDecimal getCashReturn(AccountOverview accountOverview) {
+  private record CashReturn(BigDecimal paymentsSum, BigDecimal value) {
+    public CashReturn() {
+      this(ZERO, ZERO);
+    }
+  }
+
+  private CashReturn getCashReturn(AccountOverview accountOverview) {
     val paymentsSum =
         accountOverview.getTransactions().stream()
             .map(Transaction::amount)
             .reduce(BigDecimal::add)
-            .orElse(BigDecimal.ZERO);
+            .orElse(ZERO);
 
-    return accountOverview
-        .getEndingBalance()
-        .subtract(accountOverview.getBeginningBalance())
-        .subtract(paymentsSum);
+    BigDecimal cashReturn =
+        accountOverview
+            .getEndingBalance()
+            .subtract(accountOverview.getBeginningBalance())
+            .subtract(paymentsSum)
+            .setScale(CASH_DECIMAL_PLACES, RoundingMode.HALF_UP);
+
+    return new CashReturn(paymentsSum, cashReturn);
   }
 
-  private Optional<BigDecimal> getCashReturn(
-      AccountOverview accountOverview, String comparisonFund) {
+  private CashReturn getCashReturn(AccountOverview accountOverview, String comparisonFund) {
     List<Transaction> purchaseTransactions = getPurchaseTransactions(accountOverview);
 
     val endingBalance =
         getSimulatedEndingBalanceForAFund(accountOverview, comparisonFund, purchaseTransactions);
-    if (endingBalance.isEmpty()) return Optional.empty();
+
+    if (endingBalance.isEmpty()) {
+      return new CashReturn();
+    }
 
     val paymentsSum =
         accountOverview.getTransactions().stream()
             .map(Transaction::amount)
             .reduce(BigDecimal::add)
-            .orElse(BigDecimal.ZERO);
+            .orElse(ZERO);
 
-    return Optional.of(
+    BigDecimal cashReturn =
         endingBalance
             .orElseThrow()
             .subtract(accountOverview.getBeginningBalance())
-            .subtract(paymentsSum));
+            .subtract(paymentsSum)
+            .setScale(CASH_DECIMAL_PLACES, RoundingMode.HALF_UP);
+
+    return new CashReturn(paymentsSum, cashReturn);
   }
 
   private List<Transaction> getPurchaseTransactions(AccountOverview accountOverview) {
@@ -149,14 +161,14 @@ public class ReturnCalculator {
   }
 
   private List<Transaction> negateTransactionAmounts(List<Transaction> transactions) {
-    return transactions.stream().map(ReturnCalculator::negateTransactionAmount).collect(toList());
+    return transactions.stream().map(ReturnCalculator::negateTransactionAmount).toList();
   }
 
   private static Transaction negateTransactionAmount(Transaction transaction) {
     return new Transaction(transaction.amount().negate(), transaction.time());
   }
 
-  private double calculateReturn(
+  private BigDecimal calculateReturn(
       List<Transaction> purchaseTransactions, BigDecimal endingBalance, Instant endTime) {
     List<Transaction> negatedTransactions = negateTransactionAmounts(purchaseTransactions);
     Transaction endingTransaction = new Transaction(endingBalance, endTime);
@@ -167,16 +179,16 @@ public class ReturnCalculator {
     return calculateInternalRateOfReturn(internalTransactions);
   }
 
-  private double calculateInternalRateOfReturn(List<Transaction> transactions) {
+  private BigDecimal calculateInternalRateOfReturn(List<Transaction> transactions) {
     if (allZero(transactions)) {
-      return 0;
+      return ZERO;
     }
     // wish the author of this great library used interfaces instead
     try {
       List<org.decampo.xirr.Transaction> xirrInternalTransactions =
           transactions.stream()
               .map(ReturnCalculator::xirrTransactionFromInternalTransaction)
-              .collect(toList());
+              .toList();
 
       double result = new Xirr(xirrInternalTransactions).xirr();
       return roundPercentage(result);
@@ -190,11 +202,9 @@ public class ReturnCalculator {
     return transactions.stream().allMatch(transaction -> ZERO.compareTo(transaction.amount()) == 0);
   }
 
-  private double roundPercentage(double percentage) {
+  private BigDecimal roundPercentage(double percentage) {
     // ok to lose the precision here, doing presentational formatting here.
-    return BigDecimal.valueOf(percentage)
-        .setScale(OUTPUT_SCALE, RoundingMode.HALF_UP)
-        .doubleValue();
+    return BigDecimal.valueOf(percentage).setScale(RETURN_DECIMAL_PLACES, RoundingMode.HALF_UP);
   }
 
   private static org.decampo.xirr.Transaction xirrTransactionFromInternalTransaction(
